<resources>
    <string name="app_name">uts1</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">
        Welcome, Silahkan Join Aplikasi Kami
        <br><b>Login</b> Jika Sudah Mempunyai Akun</br>
        <br><b>Register</b> Untuk Memulai Perjalanan Anda di Aplikasi</br>

    </string>
    <string name="illustration_img"></string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">Login</string>
    <string name="login_title">Silahkan Login</string>
    <string name="sub_login_title">
        <br>Anda Dapat <b>Login</b> Jika Anda Mempunyai Akun</br>
        <br><b>Kembali</b> dan <b>Register</b> Jika Anda Belum Mempunyai Akun</br></string>
    <string name="login_email">___Masukkan Email atau Username</string>
    <string name="login_password">___Masukkan Password</string>
    <string name="login_forgot_pw">Lupa Password?</string>
    <string name="login_havent_account">Tidak Punya Akun?
    <b>Daftar</b></string>
    <string name="register_title">Dafter Akun Baru</string>
    <string name="register_sub_title">Silahkan Isi Data Untuk membuat Akun Baru</string>
    <string name="register_fullname">___Nama Anda</string>
    <string name="register_email">___Nama Anda</string>
    <string name="register_username">___Username Anda</string>
    <string name="register_password">___Password Anda</string>
    <string name="register_confirm_password">___Konfirmasi Password</string>
    <string name="register_have_account">Sudah Punya Akun! <b>Login</b></string>
</resources>